--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "element-ui": "^2.15.1",
         "npm": "^7.11.2",
         "vue-axios": "^3.2.4",
         "vue-router": "^3.5.1"
